--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.mum</groupId>
-	<artifactId>coffeeShop</artifactId>
-	<name>coffeeShop</name>
+	<artifactId>coffeeShopWeb</artifactId>
+	<name>CoffeeShop_Web</name>
 	<packaging>jar</packaging>
 
 
