Add web front controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.datasource.username=root
 spring.datasource.password=samuel
 
 rest_api_baseUrl=http://localhost:8080/coffeeShop
+server.port=8088
