--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.mvc.view.suffix=.jsp
 
 server.port=8088
 
-rest_api_baseUrl=http://localhost:8080/coffeeShop
+rest_api_baseUrl=http://localhost:8080/
